[package]
name = "file-storage-client"
version = "0.1.0"
authors = ["KonstmarNSK <konstmar@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuse = "0.3.1"

[dependencies.log]
version = "0.3"

[dependencies.thread-scoped]
version = "1"

[dependencies.time]
version = "0.1"

[dependencies.libc]
version = "0.2"
[dependencies.env_logger]
version = "0.3"